<resources>
    <string name="app_name">荣光</string>
    <string name="have_no_permission">系统没有权限</string>
    <string name="save_success">保存成功</string>
    <string name="bind_device">绑定设备</string>
    <string name="local_found_device">本地发现的设备</string>
    <string name="other">其他</string>
    <string name="deviceadd_loading">加载中</string>
    <string name="deviceadd_device_bind_success_text">配网成功</string>
    <string name="deviceadd_device_bind_success_description">开启你的智能生活</string>
    <string name="label_bind_device">开始使用</string>
    <string name="loading">加载中...</string>
    <string name="back">返回</string>
    <string name="total">全部</string>
    <string name="sure">确认</string>
    <string name="sure1">确定</string>
    <string name="submit">提交</string>
    <string name="edit">编辑</string>
    <string name="setting">设置</string>
    <string name="done">完成</string>
    <string name="unknown">未知</string>
    <string name="next">下一步</string>
    <string name="delete">删除</string>
    <string name="online_device">云端设备</string>
    <string name="add">添加</string>
    <string name="cancel">取消</string>
    <string name="family">家庭</string>
    <string name="community">社区</string>
    <string name="no_information">暂无任何信息</string>
    <string name="the_video_has_been_saved">录像已保存到系统相册！</string>
    <string name="camera_permission">请开启相机权限!</string>
    <string name="picture_saved">截图已保存到系统相册！</string>
    <string name="version_too_low">您当前手机版本过低，需要申请root权限方可进行录屏操作</string>
    <string name="sure_delete_file">是否删除该文件？</string>
    <string name="file_has_been_removed">文件已经成功移除</string>
    <string name="click_again_to_exit">再次点击退出</string>
    <string name="no_data">暂无数据哟～</string>
    <string name="text_login">登录</string>
    <string name="logout">退出登录</string>
    <string name="login_success">登录成功</string>
    <string name="text_forget_password">忘记密码？</string>
    <string name="forget_password">找回密码</string>
    <string name="change_password_success">修改密码成功</string>
    <string name="regist">注册</string>
    <string name="login_agreement">登录即代表阅读并同意 使用条款</string>
    <string name="text_hint_import_password">请输入6-16位数字/字符的密码</string>
    <string name="text_hint_password_not_china">密码不能含有中文！</string>
    <string name="text_import_phonenumber">请输入手机号码</string>
    <string name="import_code">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="get_verification_code_success">验证码已发至手机，请注意查收</string>
    <string name="text_import_password">请输入密码</string>
    <string name="set_6_20_password">请设置6～20位密码</string>
    <string name="input_6_20_password">输入6-20位新密码</string>
    <string name="input_correct_phone">请输入正确的手机号</string>
    <string name="empty_code">验证码不能为空</string>
    <string name="get_code_again">重新获取</string>
    <string name="get_code_after">%d后重新获取</string>
    <string name="empty_password">密码不能为空</string>
    <string name="entered_passwords_differ">两次输入的密码不一致！</string>
    <string name="same_password">旧密码跟新密码不同相同</string>
    <string name="the_code_cannot_be_empty">验证码不能为空</string>
    <string name="error_old_password">请输入正确的旧密码</string>
    <string name="regist_success">注册成功</string>
    <string name="logining">正在登录...</string>
    <string name="china">中国</string>
    <string name="Macau">澳门</string>
    <string name="HK">香港</string>
    <string name="Taiwan">台湾</string>
    <string name="Australia">Australia</string>
    <string name="Canada">Canada</string>
    <string name="France">France</string>
    <string name="Deutschland">Deutschland</string>
    <string name="india">भारत</string>
    <string name="Italy">Italia</string>
    <string name="Malaysia">Malaysia</string>
    <string name="Singapore">Singapore</string>
    <string name="South_Korea">한국</string>
    <string name="Thailand">ไทย</string>
    <string name="United_States">United States</string>
    <string name="net_work_wrong">网络不可用</string>
    <string name="outside">室外</string>
    <string name="temp_1">温度：</string>
    <string name="temp_">温度：%s</string>
    <string name="wind">风力：</string>
    <string name="wind_">风力：%s</string>
    <string name="inside">室内</string>
    <string name="wet">湿度：</string>
    <string name="wet_">湿度：%s</string>
    <string name="pm25">PM2.5</string>
    <string name="pm">PM2.5：</string>
    <string name="pm_">PM2.5：%sug/m3</string>
    <string name="tvoc_">TVOC : %s</string>
    <string name="add_box">快去添加空气盒子吧～</string>
    <string name="box_off_line">您的空气传感器已离线</string>
    <string name="environmental_data">环境数据</string>
    <string name="indoor_weather">室内天气</string>
    <string name="outside_weather">室外天气</string>
    <string name="indoor_water">室内水质</string>
    <string name="recommended_scene">推荐场景</string>
    <string name="scene_detail">场景详情</string>
    <string name="weather_">weather_%s</string>
    <string name="weather_1">天气</string>
    <string name="weather_2">PM2.5</string>
    <string name="weather_3">天气</string>
    <string name="weather_4">温度</string>
    <string name="weather_status_">weather_status%s</string>
    <string name="weather_status1">晴</string>
    <string name="weather_status2">> 90</string>
    <string name="weather_status3">雨</string>
    <string name="weather_status4">> 26°C</string>
    <string name="air_quality_">空气质量：</string>
    <string name="noise_">噪声：%sdB</string>
    <string name="tips_">Tips：</string>
    <string name="line_chart">折线图</string>
    <string name="_24hour">24小时</string>
    <string name="formaldehyde">甲醛</string>
    <string name="co2">CO2</string>
    <string name="tvoc">TVOC</string>
    <string name="application">应用</string>
    <string name="equipment">设备</string>
    <string name="smart_home">智能家居</string>
    <string name="linkage">联动</string>
    <string name="home_model">回家模式</string>
    <string name="out_model">离家模式</string>
    <string name="security_model">布放模式</string>
    <string name="morning_start_time">起床模式开启时间</string>
    <string name="slow_total_time">缓缓开灯总时长</string>
    <string name="total_time_limit">总时长不能少于10秒</string>
    <string name="morning_model_failed">添加起床模式失败，请稍后重试</string>
    <string name="morning_model_success">添加成功</string>
    <string name="add_failed">添加失败</string>
    <string name="add_scene">添加场景</string>
    <string name="start_scene">启用场景</string>
    <string name="stop_scene">禁用场景</string>
    <string name="linkage_tip">长按执行场景</string>
    <string name="add_device">添加设备</string>
    <string name="add_device1">去添加</string>
    <string name="search_device">请输入设备的品牌型号等关键词</string>
    <string name="scanning">扫描中</string>
    <string name="searching">搜索中</string>
    <string name="open_wifi_to_search">正在搜索设备，请开启WI-FI。</string>
    <string name="operate_success">操作成功</string>
    <string name="all_device">全部设备</string>
    <string name="have_no_device_">还没有设备哦~</string>
    <string name="off_line">离线</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="online">在线</string>
    <string name="have_no_linkage_">暂无联动～</string>
    <string name="scan">扫一扫</string>
    <string name="auto_scan">将二维码放入框内，即可自动扫描</string>
    <string name="touch_light">轻触照亮</string>
    <string name="touch_dark">轻触关闭</string>
    <string name="album">相册</string>
    <string name="select_qr_code_image">选择二维码图片</string>
    <string name="open_success">开门成功</string>
    <string name="please_scan_again">无效的二维码信息，请稍后重试</string>
    <string name="camera_opening_error">相机打开出错，请稍后重试</string>
    <string name="identificate_failure">识别失败</string>
    <string name="manage_room">管理房间</string>
    <string name="add_room">添加房间</string>
    <string name="edit_room">编辑房间</string>
    <string name="room_name">房间名称</string>
    <string name="input_room_name">请输入房间名称</string>
    <string name="add_room_success">添加房间成功</string>
    <string name="room_pic">房间类型</string>
    <string name="choose_room_icon">选择场景图片</string>
    <string name="type_">类型：</string>
    <string name="choose_room_type">选择房间类型</string>
    <string name="bind_success">绑定成功</string>
    <string name="unbind_success">解绑成功</string>
    <string name="add_linkage">添加联动</string>
    <string name="edit_life_linkage">编辑场景</string>
    <string name="edit_life_linkage_success">编辑场景名称成功</string>
    <string name="if_">如果</string>
    <string name="satisfy_any_of_the_following_trigger_conditions">满足以下任一条件（非必选）</string>
    <string name="satisfy_any_of_the_following_trigger_conditions1">满足以下任一条件</string>
    <string name="timing">定时</string>
    <string name="vehicle_access">车辆通行</string>
    <string name="choose_vehicle">选择车辆</string>
    <string name="choose_park_device">选择停车设备</string>
    <string name="choose_in_or_out">选择进和出</string>
    <string name="car_in_out_">car_in_out%d</string>
    <string name="car_in_out1">进</string>
    <string name="car_in_out2">出</string>
    <string name="car_in_out3">进和出</string>
    <string name="choose_vehicle_park_device">您尚未选择车辆</string>
    <string name="only_can_choose_one_vehicle_access_condition">车辆通行条件场景仅可添加一个条件</string>
    <string name="person_access">人员通行</string>
    <string name="linkage_log">场景日志</string>
    <string name="and">并且</string>
    <string name="all_of_the_following_restrictions_are_met">满足以下全部条件（非必选）</string>
    <string name="jiu">就</string>
    <string name="perform_the_following_conditions">就执行以下动作（必选）</string>
    <string name="perform_the_following_conditions1">就执行以下动作</string>
    <string name="recommend">推荐</string>
    <string name="add_condition">添加条件</string>
    <string name="trigger_condition">触发条件</string>
    <string name="manual_trigger">手动触发</string>
    <string name="manual_trigger1">手动触发(默认)</string>
    <string name="repeat">重复</string>
    <string name="every_day">每天</string>
    <string name="every_sun">每周日</string>
    <string name="every_mon">每周一</string>
    <string name="every_tue">每周二</string>
    <string name="every_wed">每周三</string>
    <string name="every_thu">每周四</string>
    <string name="every_fri">每周五</string>
    <string name="every_sat">每周六</string>
    <string name="at_lease_one_day">请至少选择一天</string>
    <string name="linkage_name">联动名称</string>
    <string name="scene_name">场景名称</string>
    <string name="input_linkage_name">编辑场景名称</string>
    <string name="input_linkage_name1">请输入场景名称，如：回家模式、离家模式</string>
    <string name="pick_one_device">选择一个设备</string>
    <string name="enable_linkage_device">可联动设备</string>
    <string name="choose_status">选择状态</string>
    <string name="choose">选择</string>
    <string name="pick_linkage_icon">选择联动图标</string>
    <string name="send_device_message">发送设备信息</string>
    <string name="send_app_message">发APP通知</string>
    <string name="input_send_app_message">请输入发送内容</string>
    <string name="change_device_status">改变设备状态</string>
    <string name="perform_scene">执行场景</string>
    <string name="perform_scene_success">执行场景成功</string>
    <string name="perform_success">执行成功</string>
    <string name="_100">%d/100</string>
    <string name="all_day">全天</string>
    <string name="add_linkage_success">添加联动成功</string>
    <string name="add_action">请添加执行条件</string>
    <string name="edit_linkage_success">修改联动成功</string>
    <string name="edit_linkage_name_success">联动名称修改成功</string>
    <string name="begin">开始</string>
    <string name="end">结束</string>
    <string name="_0_o_clock">00:00</string>
    <string name="_24_o_clock">23:59</string>
    <string name="time_limit">时间限制</string>
    <string name="delay_perform">设置延时</string>
    <string name="perform_now">立即执行</string>
    <string name="do_after_done">   </string>
    <string name="delay_after">延时%s后执行</string>
    <string name="visitor_regist">访客登记</string>
    <string name="id_type">证件类型</string>
    <string name="id_number1">证件号</string>
    <string name="please_input_id_number">请输入证件号</string>
    <string name="please_input_name">请输入姓名</string>
    <string name="personnel_safety_verification">人员安全验证</string>
    <string name="xinghao">*</string>
</resources>