<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/_F1F1F1"
    android:orientation="vertical">

    <com.aliyun.ayland.widget.titlebar.MyTitleBar
        android:id="@+id/titlebar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:bartext="@string/visitor_regist" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24px"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="45px"
        android:paddingRight="45px">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150px">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_type"
                    android:textColor="@color/_333333"
                    android:textSize="45px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xinghao"
                    android:textColor="@color/_FF5656"
                    android:textSize="45px" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_id_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:drawableRight="@drawable/atico_junp"
                android:gravity="center_vertical|right"
                android:textColor="@color/_333333"
                android:textSize="45px" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_alignParentBottom="true"
            android:background="@color/_F1F1F1" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150px">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_number1"
                    android:textColor="@color/_333333"
                    android:textSize="45px" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/xinghao"
                    android:textColor="@color/_FF5656"
                    android:textSize="45px" />
            </LinearLayout>

            <ImageView
                android:id="@+id/img_shot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="21px"
                android:src="@drawable/ico_fkdj_xiangji" />

            <EditText
                android:id="@+id/et_id_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/img_shot"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/please_input_id_number"
                android:textColor="@color/_333333"
                android:textColorHint="@color/_DDDDDD"
                android:textSize="45px" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="3px"
            android:layout_alignParentBottom="true"
            android:background="@color/_F1F1F1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/at_name"
                android:textColor="@color/_333333"
                android:textSize="45px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xinghao"
                android:textColor="@color/_FF5656"
                android:textSize="45px" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="right|center_vertical"
                android:hint="@string/please_input_name"
                android:textColor="@color/_333333"
                android:textColorHint="@color/_DDDDDD"
                android:textSize="45px" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24px"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_get_safety_verification"
            android:layout_width="match_parent"
            android:layout_height="150px"
            android:background="@drawable/selector_white"
            android:gravity="center"
            android:text="@string/personnel_safety_verification"
            android:textColor="@color/_86523C"
            android:textSize="45px" />

        <TextView
            android:id="@+id/tv_safety_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="48px"
            android:textColor="@color/_333333"
            android:textSize="39px" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="960px"
        android:layout_height="135px"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="210px"
        android:background="@drawable/selector_150px_1478c8_005395"
        android:gravity="center"
        android:text="@string/at_next"
        android:textColor="@color/white"
        android:textSize="45px" />
</LinearLayout>